novas atualizações nos links

--- a/fotos.html
+++ b/fotos.html
@@ -55,8 +55,7 @@
 </section>
 <footer id ="rodape">
     <p>Copyright &copy; 2020 - by Estephane Mendes <br/> 
-        <a href = "http://facebook.com/cursoemvideo" target="_blank">Facebook</a> | 
-        <a href = "http: /q twitter.com/cursoemvideo" target="_blanck">Twitter</a>
+        <a href = "https://www.instagram.com/estephane_mn/" target="_blank">instagram</a> 
     </p>
 </footer>
 </div>
