--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a fundo as funções dos alimentos. São elas a nutrição, a dietética.</p>
 
 <footer id ="rodape">
     <p>Copyright &copy; 2020 - by Estephane Mendes <br/> 
-        <a href = "https://www.instagram.com/estephane_mn/" target="_blank">instagram</a> | 
+        <a href = "https://www.instagram.com/estephane_mn/" target="_blank">instagram</a> 
     </p>
 </footer>
 </div>
