alterações na página de mídia

--- a/media.html
+++ b/media.html
@@ -42,11 +42,11 @@
     <h1 id= "texto"> Receita Camarão cremoso </h1>    
     <div id="tv-radio">
         <audio id="musica" controls="controls">
-           <source src="_media/Camarão-Cremoso-Fácil-de-Fazer-_ReceitaOxford.mp3" type="audio/mpeg"/> 
+           <source src="" type="audio/mpeg"/> 
             Desculpe mas não foi possível carregar o áudio
         </audio>
         <video id="filme" controls="controls" >
-            <source src="_media/Camarão Cremoso Fácil de Fazer #ReceitaOxford.mp4" type="video/mp4"/>
+            <source src="" type="video/mp4"/>
             Desculpe mas não foi possível carregar o vídeo
         </video>
     </div>    
